--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">android_anim_button</string>
+
+    <!-- list view load more -->
+    <string name="listview_load_more_click_to_load_more">加载更多</string>
+    <string name="listview_load_more_error">加载失败</string>
+    <string name="listview_load_more_error_refresh">加载失败,点击重试</string>
+    <string name="listview_load_more_loaded_empty">没有更多了</string>
+    <string name="listview_load_more_loaded_no_more">没有更多了</string>
+    <string name="listview_load_more_loading">加载中...</string>
 </resources>
